--- a/NitroTextFieldParser/NitroTextFieldParser/NitroTextFieldParser.csproj
+++ b/NitroTextFieldParser/NitroTextFieldParser/NitroTextFieldParser.csproj
@@ -5,9 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>NitroTextFieldParser</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
-    <Version>1.0.0</Version>
-    <Authors>Christiaan</Authors>
+    <PackageVersion>1.1.0</PackageVersion>
+    <Version>1.1.0</Version>
+    <Authors>Christiaan/Stikie123</Authors>
     <Product>NitroTextFieldParser</Product>
     <IncludeSymbols>False</IncludeSymbols>
     <Title>NitroTextFieldParser</Title>
