--- a/NitroTextFieldParser/NitroTextFieldParserTests/NitroTextFieldParserTests.csproj
+++ b/NitroTextFieldParser/NitroTextFieldParserTests/NitroTextFieldParserTests.csproj
@@ -10,7 +10,9 @@
 	<ItemGroup>
 		<PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
 		<PackageReference Include="Bogus" Version="35.6.1" />
-		<PackageReference Include="NitroTextFieldParser" Version="1.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\NitroTextFieldParser\NitroTextFieldParser.csproj" />
 	</ItemGroup>
 
 </Project>
