--- a/NitroTextFieldParser/NitroTextFieldParserTests/NitroTextFieldParserTests.csproj
+++ b/NitroTextFieldParser/NitroTextFieldParserTests/NitroTextFieldParserTests.csproj
@@ -1,15 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
 		<PackageReference Include="Bogus" Version="35.6.1" />
+		<PackageReference Include="NBuilder" Version="6.1.0" />
+		<PackageReference Include="nunit" Version="3.13.2" />
+		<PackageReference Include="NUnit.ConsoleRunner" Version="3.12.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+		<PackageReference Include="NunitXml.TestLogger" Version="3.0.107" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\NitroTextFieldParser\NitroTextFieldParser.csproj" />
